[ADD] modify readme and fix some bug.

--- a/严苛的管理者.md
+++ b/严苛的管理者.md
@@ -12,5 +12,9 @@
 
 
 
+程序员应该要给与他们充分的自由，他们脑子里那些改变世界的想法必定是与自由挂钩的，他们不服管教，他们崇尚自由，他们天马行空，他们是技术的畅想家和浪漫主义的践行者。而管理唯一存在的必要就是确保程序员不会脱离公司整体的大方向，让大家凝成一股绳向前使力，至于其他，都是做蠢事！非常愚蠢！
+
+
+
 相比乔尔的寸土必争在这里也失去了效用，因为，若要争这一块荒凉的土，便要与这公司为敌，而马克和汤姆这两位聪明的程序员也没法改变这样的状况，但是！在他们的心理已经对这样的场景深恶痛绝了，他们坚定，以后自己开公司的时候一定要改变这样的状况！
 
