[FIX] fix some word error.

--- a/严苛的管理者.md
+++ b/严苛的管理者.md
@@ -1,6 +1,6 @@
 嘿！可别误解了，我可不是在唱响一曲颂歌！呵，现在你可缓过来了吧，我其实是在骂那些呆头呆脑的家伙，绝对遵守规则，严格执行既定程序，他们那小的可怜脑容量从来就没有空间思考这些规则的合理性。欧！他们还是感觉特别开心的，拿着“规则”这把尚方宝剑，每天来公司转悠的唯一目的就是监视他的程序员，防止他们破坏规则；“诶！那个谁，不准在会议室里面睡觉！我们公司可没有那么open的！”，天知道这个大得离谱的会议室还能用来干嘛，是的，这个会议室都快有程序员办公室的一半大了，我的天啊！整天空着就像废物一样一无是处，还不允许给我们程序员在身体疲劳时享受一番，真是愚蠢之极。
 
-接下来我要讲的是一个真实的故事。马克和汤姆是非常优秀的程序员，他们脑袋里整天都捣弄着一些稀奇古怪的伟大构想，他们喜欢自由，做事认真，而且最重要的是，他们都喜欢早一点吃午饭，没错，11：30才是公司规则里面明确写着的休息时间，但是马克和汤姆了，因为进行了一上午剧烈的脑力活动之后，早已经精疲力竭了，他们急需食物来补充能量，以进行这一天接下来高强度的工作。于是，他们早早的点了饭，并在11：10进入茶水间，以免影响他人的工作，开始享受美味的午餐，看着秀色可餐的饭菜，闻着扑鼻的香气，他们感到了放松和难得的惬意，嘴角也开始泛起上扬，泛起微笑。就在这时，一位张牙舞爪的管理者踏着轻轻的，轻的不能再轻的补发走进茶水间，咧着很大的嘴却发出了女人般的笑声：”小伙伴们，现在可没到吃饭的时间哦，我们公司的规则…“，去他的规则，去他的管理者，刚刚升起的好心情猝不及防的就被破坏了，马克和汤姆开始变得沉默，也不对那位严苛的，咧嘴笑着的管理做作更多的回答，饭菜尽管美味，但是已经没有了心情...
+接下来我要讲的是一个真实的故事。马克和汤姆是非常优秀的程序员，他们脑袋里整天都捣弄着一些稀奇古怪的伟大构想，他们喜欢自由，做事认真，而且最重要的是，他们都喜欢早一点吃午饭，没错，11：30才是公司规则里面明确写着的休息时间，但是马克和汤姆了，因为进行了一上午剧烈的脑力活动之后，早已经精疲力竭了，他们急需食物来补充能量，以进行这一天接下来高强度的工作。于是，他们早早的点了饭，并在11：10进入茶水间，以免影响他人的工作，开始享受美味的午餐，看着秀色可餐的饭菜，闻着扑鼻的香气，他们感到了放松和难得的惬意，嘴角也开始泛起上扬，泛起微笑。就在这时，一位张牙舞爪的管理者踏着轻轻的，轻的不能再轻的步伐走进茶水间，咧着很大的嘴却发出了女人般的笑声：”小伙伴们，现在可没到吃饭的时间哦，我们公司的规则…“，去他的规则，去他的管理者，刚刚升起的好心情猝不及防的就被破坏了，马克和汤姆开始变得沉默，也不对那位严苛的，咧嘴笑着的管理做作更多的回答，饭菜尽管美味，但是已经没有了心情...
 
 
 
